prevent word break on navbar (#586)

--- a/v2/src/layout/header.module.scss
+++ b/v2/src/layout/header.module.scss
@@ -44,6 +44,7 @@ header {
   align-items: center;
   padding-right: 60px;
   color: #fff;
+  white-space:nowrap
 }
 
 .headerLinks {
